// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post should render with a number 1`] = `
<article
  className="post article"
>
  <div
    className="post number ribbon"
  >
    <div
      className="backdrop"
    >
      <div
        className="text"
      >
        #
        42
      </div>
    </div>
  </div>
  <h1>
    Don't panic.
  </h1>
  <div
    className="metadata"
  >
    posted on
     
    <time
      dateTime={"2019-02-01T00:00:00.000Z"}
    >
      Friday, 1 February 2019
    </time>
     
    <span
      data-container="metadata-author"
    >
      by Clarice Bouwer
    </span>
     
    <span
      data-container="metadata-ttr"
    >
      (Est. 1 minute read)
    </span>
  </div>
  <div
    className="spacer small"
  />
  <div
    className="reading-panel"
  >
    <p>
      Don't panic.
    </p>
  </div>
</article>
`;

exports[`Post should render with html 1`] = `
<article
  className="post article"
>
  <h1>
    Don't panic.
  </h1>
  <div
    className="metadata"
  >
    posted on
     
    <time
      dateTime={"2019-02-01T00:00:00.000Z"}
    >
      Friday, 1 February 2019
    </time>
     
    <span
      data-container="metadata-author"
    >
      by Clarice Bouwer
    </span>
     
    <span
      data-container="metadata-ttr"
    >
      (Est. 1 minute read)
    </span>
  </div>
  <div
    className="spacer small"
  />
  <div
    className="reading-panel"
  >
    <p>
      Arthur Dent (Martin Freeman) is trying to prevent his house from being bulldozed when his friend Ford Prefect (Mos Def) whisks him into outer space. It turns out Ford is an alien who has just saved Arthur from Earth's total annihilation. Ford introduces Arthur to his myriad friends, including many-headed President Zaphod Beeblebrox (Sam Rockwell) and sexy refugee Trillian (Zooey Deschanel). Arthur makes his way across the stars while seeking the meaning of life, or something close to it.
    </p>
  </div>
</article>
`;

exports[`Post should render with plain text 1`] = `
<article
  className="post article"
>
  <h1>
    Don't panic.
  </h1>
  <div
    className="metadata"
  >
    posted on
     
    <time
      dateTime={"2019-02-01T00:00:00.000Z"}
    >
      Friday, 1 February 2019
    </time>
     
    <span
      data-container="metadata-author"
    >
      by Clarice Bouwer
    </span>
     
    <span
      data-container="metadata-ttr"
    >
      (Est. 1 minute read)
    </span>
  </div>
  <div
    className="spacer small"
  />
  <div
    className="reading-panel"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Arthur Dent (Martin Freeman) is trying to prevent his house from being bulldozed when his friend Ford Prefect (Mos Def) whisks him into outer space. It turns out Ford is an alien who has just saved Arthur from Earth's total annihilation. Ford introduces Arthur to his myriad friends, including many-headed President Zaphod Beeblebrox (Sam Rockwell) and sexy refugee Trillian (Zooey Deschanel). Arthur makes his way across the stars while seeking the meaning of life, or something close to it.",
      }
    }
  />
</article>
`;

exports[`Post should render with tags 1`] = `
<article
  className="post article"
>
  <div
    className="post number ribbon"
  >
    <div
      className="backdrop"
    >
      <div
        className="text"
      >
        #
        42
      </div>
    </div>
  </div>
  <h1>
    Don't panic.
  </h1>
  <div
    className="metadata"
  >
    posted on
     
    <time
      dateTime={"2019-02-01T00:00:00.000Z"}
    >
      Friday, 1 February 2019
    </time>
     
    <span
      data-container="metadata-author"
    >
      by Clarice Bouwer
    </span>
     
    <span
      data-container="metadata-ttr"
    >
      (Est. 1 minute read)
    </span>
  </div>
  <div
    className="tags"
  >
     
    <a
      className="tag anchor"
      href="/tag/hitchikers"
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="hitchikers"
    >
      hitchikers
    </a>
     
     
    <a
      className="tag anchor"
      href="/tag/guide"
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="guide"
    >
      guide
    </a>
     
     
    <a
      className="tag anchor"
      href="/tag/to"
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="to"
    >
      to
    </a>
     
     
    <a
      className="tag anchor"
      href="/tag/the"
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="the"
    >
      the
    </a>
     
     
    <a
      className="tag anchor"
      href="/tag/galaxy"
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="galaxy"
    >
      galaxy
    </a>
     
  </div>
  <div
    className="spacer small"
  />
  <div
    className="reading-panel"
  >
    <p>
      Don't panic.
    </p>
  </div>
</article>
`;
